--- a/src/Component/FormCampus/FormCampus.css
+++ b/src/Component/FormCampus/FormCampus.css
@@ -43,17 +43,6 @@
 }
 .campus-icon {
   cursor: pointer;
-  /* padding-left: 10px; */
-}
-.campus-icons-down {
-  /* min-height: 130px; */
-  margin-top: 30px;
-  font-size: 20px;
-  height: 100%;
-}
-.campus-icon-down {
-  font-size: 25px;
-  cursor: pointer;
 }
 /* Form */
 .campus-title-form {
@@ -67,8 +56,8 @@
 }
 .campus-title-form.active {
   max-height: 300px;
-  padding: 20px 50px;
-  box-shadow: 0 0 40px 0 rgb(0 0 0 / 8%);
+  padding-top: 15px;
+  padding-bottom: 15px;
   transition: all 0.3s ease-in-out;
 }
 .campus-item-title {
@@ -93,9 +82,6 @@
 .campus-title {
   margin-bottom: 1px;
 }
-.campus-title-item {
-  line-height: 1.5;
-}
 .campus-item-content {
   display: flex;
   font-weight: 600;
@@ -115,14 +101,13 @@
 }
 
 /* Items drop down*/
-.campus-items-wrap {
+.items-wrap {
   background-color: white;
   max-height: 1000px;
-  padding-right: 10px;
   padding-left: 50px;
   transition: all 0.3s ease-in-out;
 }
-.campus-item-header {
+.cp-item-header {
   display: flex;
   font-weight: 400;
   font-size: 16px;
@@ -133,16 +118,19 @@
   border: none;
   outline: none;
   width: 100%;
-  min-height: 50px;
   padding: 10px 25px;
   background-color: white;
   border-bottom: solid 1px grey;
   box-shadow: 0 10px 10px 0 rgb(0 0 0 / 8%);
 }
-.campus-content-col {
+.cp-content-col {
   width: 250px;
 }
-.campus-content-action {
+.cp-content-col.i {
+  text-align: center;
+}
+
+.cp-content-action {
   display: flex;
   background-color: #2c79d2;
   color: white;
@@ -153,39 +141,35 @@
   border-radius: 5px;
   border: 1px solid black;
 }
-.campus-content-action:hover {
+.cp-content-action:hover {
   color: white;
   background-color: rgb(80, 70, 189);
   border: black 1px solid;
 }
 
-.campus-item-col {
+.cp-item-col {
   display: block;
-  width: 50%;
+  width: 250px;
   height: 100%;
   overflow-wrap: break-word;
-  /* text-align: center; */
 }
-.campus-item-col img{
- /* width: 60%; */
- height: 100px;
- border-radius: 5px ;
+.cp-item-col img {
+  /* margin-left: 15px; */
+  vertical-align: middle;
+  text-align: center;
 }
-.item-col1{
-  padding-left: 30px;
-  width: 39%;
+.cp-backrout-img {
+  height: 100px;
+  width: 250px;
+  line-height: 70px;
+  text-align: center;
+  transition: all 0.3s ease;
 }
-.campus-edit-img{
-position: relative;
- width: 100px;
- height: 100px;
- margin-top: 10px;
+.cp-backrout-img img {
+  height: 100px;
 }
 
-.campus-edit-img img{
-  height: 100%;
-}
-.campus-add-img{
+.cp-add-img {
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -197,22 +181,33 @@ position: relative;
   border-radius: 5px;
   cursor: pointer;
 }
-.campus-icon-edit{
-  position: absolute;
-  top:5px;
-  right: 5px;
-  opacity: 0.5;
-  cursor: pointer;
-}
-.campus-icon-edit:hover{
-  opacity: 1;
-}
-.cp-icon-add{
- text-align: center;
-}
-.campus-add-img:hover{
+.cp-add-img:hover {
   color: #2c79d2;
   border-color: #2c79d2;
 }
-/* .col2{
-  /* padding-left: 10px; */
+.cp-edit-img {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  border-radius: 5px;
+  color: rgb(52, 117, 207);
+  cursor: pointer;
+}
+.cp-edit-img .cp-icon-add {
+  opacity: 0.3;
+}
+
+.cp-edit-img:hover .cp-icon-add {
+  opacity: 1;
+}
+.cp-edit-img:hover {
+  opacity: 0.8;
+}
+
+.campus-box-modal textarea {
+  height: 120px;
+}
