--- a/src/Component/FormReceive/ReceiveForm.css
+++ b/src/Component/FormReceive/ReceiveForm.css
@@ -150,21 +150,22 @@
   height: 100%;
   overflow-wrap: break-word;
 }
-.rc-item-col img{
+.rc-item-col img {
   /* margin-left: 15px; */
   vertical-align: middle;
   text-align: center;
 }
-.rc-backrout-img{
+.rc-backrout-img {
   width: 70px;
-    height: 70px;
-    line-height: 70px;
-    border-radius: 100%;
-    background: rgba(22, 170, 202, 0.2);
-    text-align: center;
-    transition: all 0.3s ease;
+  height: 70px;
+  line-height: 70px;
+  border-radius: 100%;
+  background: rgba(22, 170, 202, 0.2);
+  text-align: center;
+  transition: all 0.3s ease;
 }
-.rc-add-img{
+
+.rc-add-img {
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -176,34 +177,33 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.rc-add-img:hover{
+.rc-add-img:hover {
   color: #2c79d2;
   border-color: #2c79d2;
 }
-.re-edit-img{
-  position: relative;
-  width: 70px;
-  height: 70px;
-  margin-top: 10px;
-  line-height: 70px;
-    border-radius: 100%;
-    background: rgba(22, 170, 202, 0.2);
-    text-align: center;
-    transition: all 0.3s ease;
-}
-.re-edit-img img{
-   vertical-align: middle;
-    text-align: center;
-}
-  /* width: 100%; */
-.re-icon-edit{
-  position: absolute;
-  top:7px;
-  right:10px;
-  opacity: 0.5;
+.rc-edit-img {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  border-radius: 5px;
+  color: rgb(52, 117, 207);
   cursor: pointer;
 }
-.re-icon-edit:hover{
- opacity: 1;
+.rc-edit-img .rv-icon-add {
+  opacity: 0.3;
 }
 
+.rc-edit-img:hover .rc-icon-add {
+  opacity: 1;
+}
+.rc-edit-img:hover {
+  opacity: 0.8;
+}
+
+.receive-box-modal textarea {
+  height: 120px;
+}
